changed head title

--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 ---
-title: PITSCHER about MediaArt, Internet & himself
+title: about MediaArt, Internet & himself
 layout: default
 ---
 <h1 class="title-light">Posts</h1>
