title -Medienkunst +Kunst (generalize it)

--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 ---
-title: about MediaArt, Internet & himself
+title: about Art, Internet & himself
 layout: default
 ---
 <h1 class="title-light">Posts</h1>
