--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: über Medienkunst, Internet & sich selbst
+title: über Kunst, Internet & sich selbst
 layout: default
 ---
 <h1 class="title-light">Beiträge</h1>
