--- a/en/tags.html
+++ b/en/tags.html
@@ -8,11 +8,11 @@ permalink: /en/tags/
     {% assign posts = tag[1] | where:"lang","en" %}
 
     {% if posts.size > 0 %}
-    <h2 id="{{ tag[0] }}">{{ tag[0] | prepend: "#" }}</h2>
-    <ul>
+    <h4 id="{{ tag[0] }}">{{ tag[0] | prepend: "#" }}</h4>
+    <ul class="postlist--short">
         {% for post in posts %}
         <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
+            <a href="{{ post.url }}">{{ post.title }} <time class="timestamp"> {% include _date.html date=post.date %} </time></a>
         </li>
         {% endfor %}
     </ul>
