--- a/tags.html
+++ b/tags.html
@@ -9,10 +9,10 @@ permalink: /tags/
 
     {% if posts.size > 0 %}
     <h4 id="{{ tag[0] }}">{{ tag[0] | prepend: "#" }}</h4>
-    <ul class="noliststyle">
+    <ul class="postlist--short">
         {% for post in posts %}
         <li>
-            <a href="{{ post.url }}"><sub class="grey">{{ post.date | date: '%d.%m.%Y' }} </sub>{{ post.title }}</a>
+            <a href="{{ post.url }}">{{ post.title }}<time class="timestamp">{{ post.date | date: '%d.%m.%Y' }} </time></a>
         </li>
         {% endfor %}
     </ul>
