--- a/letter.html
+++ b/letter.html
@@ -4,7 +4,7 @@ layout: default
 processing: true
 ---
 
-
+<p>press mouse for lower case</p>
 
 <div class="sketch">
 <canvas data-processing-sources="/PDE/letter/letter.pde"></canvas>
