--- a/blockfont.html
+++ b/blockfont.html
@@ -1,9 +1,3 @@
----
-title: letter
-layout: default
-processing: true
----
-
 <!--
 
 	Created with Fontastic, a Processing library to create font files
@@ -20,26 +14,31 @@ processing: true
 
     .testfont {
         font-family: blockfont;
-        font-size: 50px;
+        font-size: 2em;
     }
 
     p {
         clear: both;
     }
 
-    input[type="text"] {
+    textarea{
         font-family: blockfont;
-        font-size: 50px;
+		height: 100px;
+		width:100%;
+        font-size: 2em;
         outline: none;
         line-height: 0.7;
     }
 </style>
+I created BlockFont in the course <a href="https://www.uni-weimar.de/kunst-und-gestaltung/wiki/GMU:Wild_Type">Wild Type</a>.The Idea was to create a a font that looked like a waveform, so I used processing to draw lines from the bottom to the top of the letter and as it turned out some browsers show the interlacing in color, which is pretty interesting. <br> 
+Try out Blockfont in the text box:</br>
 
-Try out Blockfont in the text box:
-<input type="text">
+<textarea name="Text1" cols="40"></textarea>
 
 <p class="testfont">
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac hendrerit ex. Vivamus dolor ligula, vulputate sit amet tincidunt eu, porta non magna. Sed iaculis nulla metus, ac pretium nisi pretium a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas luctus lacus ante, nec interdum massa lacinia nec. Proin hendrerit aliquam dignissim. nam suscipit ipsum quis nulla cursus, bibendum gravida lectus porttitor. donec sed mauris in dui rutrum faucibus. integer aliquet tristique fringilla. aenean elementum mattis ex. nam viverra orci est, eu lacinia odio blandit nec. Duis quis dui mattis, blandit dolor non, condimentum tellus. Fusce eu nibh luctus, convallis magna sit amet, efficitur ante. Aenean Leo Nibh, Suscipit Consectetur Nibh Sed, Congue Congue Odio. In Ultricies Est Mi, Non Lacinia Diam Imperdiet Fringilla. Sed Tempor Vulputate Massa, Et Commodo Odio Aliquam Vitae. Duis Vitae Rhoncus Leo. Nunc Pulvinar Mi Quis Tellus Euismod, Id Posuere Tellus Faucibus. Donec Finibus placerat est, at sollicitudin urna convallis ac. Morbi nec orci cursus, blandit sem eget, congue leo. Phasellus rhoncus tellus felis, sit amet hendrerit tortor commodo ut. Etiam pulvinar odio nec interdum rhoncus. Vivamus id nibh porta, laoreet metus sed, luctus orci. Ut ut semper quam, nec ultricies urna. Mauris eu diam sed dolor gravida tempor. Sed ac mi risus. DUIS ELEIFEND MASSA LECTUS, IN PLACERAT ODIO PRETIUM VITAE. DONEC ANTE DUI, TEMPOR A AUGUE SED, FEUGIAT VARIUS ELIT. ETIAM NON ODIO MATTIS, DAPIBUS URNA EGET, SODALES LIBERO. QUISQUE DIGNISSIM VIVERRA FELIS, ID PORTA TORTOR MATTIS SIT AMET. NULLAM FRINGILLA, DUI AC ALIQUAM FINIBUS, LECTUS DOLOR PULVINAR RISUS, AT TEMPUS DIAM LOREM VITAE ERAT. NULLAM ID NISL SAGITTIS NUNC EFFICITUR SEMPER EGET EGET EROS. SUSPENDISSE RUTRUM EX AT ARCU MATTIS, QUIS VESTIBULUM JUSTO GRAVIDA. SED SOLLICITUDIN LOREM EU ODIO VENENATIS SEMPER. UT EFFICITUR MI EU PURUS ORNARE DAPIBUS. FUSCE ULLAMCORPER AC NEQUE EGET POSUERE.
+    when we are lonely and careworn and suffering—at such times, what we want is to be seen.
+
+An invisible mass alters the orbit of a comet; dark energy affects the acceleration of a supernova; the earth’s magnetic field tugs on birds, butterflies, sea turtles, and the compasses of mariners. The whole realm of the visible is compelled by the invisible. Our planet, our solar system, our galaxy, our universe: all of it, all of us, are pushed, pulled, spun, shifted, set in motion, and held together by what we cannot see. 
 
 </p>
