--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://astreinerbaum.github.io/index.txt"
+<meta http-equiv="refresh" content="0; url=http://matthias.pitscher.xyz/index.txt"
