--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=http://matthias.pitscher.xyz/index.txt"
+<!doctype html>
+<html>
+<head>
+	<meta http-equiv="refresh" content="0; url=http:/matthias.pitscher.xyz/index.html"
+</head>
+<body>
+
+
+
+</body>
+</html>
