--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url=http:/matthias.pitscher.xyz/index.html"
+	<meta http-equiv="refresh" content="0; url=/index.txt"
 </head>
 <body>
 
