--- a/scrollgrad.html
+++ b/scrollgrad.html
@@ -1,17 +1,13 @@
 <html>
-
 <head>
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
-    <script language="javascript" src="libraries/p5.dom.js"></script>
+    <!-- <script language="javascript" src="libraries/p5.dom.js"></script> -->
     <!-- <script language="javascript" src="libraries/p5.sound.js"></script> -->
     <script language="javascript" type="text/javascript" src="js/scrollgrad.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
 </head>
-
 <body>
-
 </body>
-
 </html>
