--- a/scrollgrad.html
+++ b/scrollgrad.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta name="theme-color" content="#db5945">
     <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
