change a lot of stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url=/index.txt"
+	<script type="text/javascript">
+  if (screen.width <= 699) {
+  document.location = "mobile.txt";
+  }
+</script>
+	<meta http-equiv="refresh" content="0; url=/index.txt" />
+	<meta name="description" content="THIS SITE IS NOT FOR ENTERTAINMENT">
 </head>
 <body>
 
