--- a/socialmedia.html
+++ b/socialmedia.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="fb-root"></div>
-	
+
 	<script>
 		(function (d, s, id) {
 			var js, fjs = d.getElementsByTagName(s)[0];
@@ -23,12 +23,15 @@
 			fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
 	</script>
-	
+
 	<div id="main">
 		<div class="sidebar-left"> <a class="twitter-timeline" href="https://twitter.com/pi43r">Tweets by Pitscher</a>
 			<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 		<div class=wrapper-right>
+			<div class='embed-container'>
+				<iframe src="https://player.vimeo.com/video/197190353?color=ffffff&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
 			<div class='embed-container'>
 				<iframe src="https://player.vimeo.com/video/180506266?color=ffffff&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
@@ -59,11 +62,14 @@
 			<div class='embed-container'>
 				<iframe src="https://player.vimeo.com/video/98365835?color=ffffff&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
-			
-			
-			
+
+
+
 		</div>
 		<div class=wrapper-left>
+			<div class='embed-container'>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Es19dBbrSfA" frameborder="0" allowfullscreen></iframe>
+			</div>
 			<div class='embed-container'>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/wYMTtrKCpGU" frameborder="0" allowfullscreen></iframe>
 			</div>
@@ -115,7 +121,7 @@
 			<div class='embed-container'>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/Va_eDBeQ2OQ" frameborder="0" allowfullscreen></iframe>
 			</div>
-			
+
 		</div>
 		<div class="sidebar-right">
 			<div class="fb-page" data-href="https://www.facebook.com/Pi43r/" data-tabs="timeline" data-width="500" data-height="2000" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
