--- a/socialmedia.html
+++ b/socialmedia.html
@@ -13,16 +13,13 @@
 <body>
 	<div id="fb-root"></div>
 
-	<script>
-		(function (d, s, id) {
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) return;
-			js = d.createElement(s);
-			js.id = id;
-			js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.8";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	</script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.8&appId=360081211033607";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 	<div id="main">
 		<div class="sidebar-left"> <a class="twitter-timeline" href="https://twitter.com/pi43r">Tweets by Pitscher</a>
@@ -124,9 +121,7 @@
 
 		</div>
 		<div class="sidebar-right">
-			<div class="fb-page" data-href="https://www.facebook.com/Pi43r/" data-tabs="timeline" data-width="500" data-height="2000" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
-				<blockquote cite="https://www.facebook.com/Pi43r/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Pi43r/">Matthias Pitscher</a></blockquote>
-			</div>
+			<div class="fb-page" data-href="https://www.facebook.com/Pi43r/" data-tabs="timeline" data-height="2000" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Pi43r/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Pi43r/">Matthias Pitscher</a></blockquote></div>
 		</div>
 	</div>
 </body>
