changes for SMM Thesis

--- a/timeforthesis.html
+++ b/timeforthesis.html
@@ -35,15 +35,13 @@
         top: 50%;
         transform: translateY(-50%);
     }
-
-    #time {}
 </style>
 
 <body>
     <div class="center">
         <p id="time"></p>
         <p>
-            follow my <a href="https://docs.google.com/document/d/1Vdh_NSgBkKv_ITbiDrQ0RefMR14_1DtsWLqhRLA7eSg/edit?usp=sharing">progress</a> and leave a comment
+          If you want to see the end result check <a href="Thesis_SMM.pdf">this!</a>
         </p>
     </div>
 
