--- a/socialmedia.html
+++ b/socialmedia.html
@@ -12,12 +12,11 @@
 
 <body>
 	<div id="fb-root"></div>
-
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.8&appId=360081211033607";
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=360081211033607";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -64,6 +63,10 @@
 
 		</div>
 		<div class=wrapper-left>
+			
+			<div class='embed-container'>
+				<iframe width="560" height="315" src="https://www.youtube.com/watch?v=89dffSaXHpo" frameborder="0" allowfullscreen></iframe>
+			</div>
 			<div class='embed-container'>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/Es19dBbrSfA" frameborder="0" allowfullscreen></iframe>
 			</div>
@@ -121,7 +124,7 @@
 
 		</div>
 		<div class="sidebar-right">
-			<div class="fb-page" data-href="https://www.facebook.com/Pi43r/" data-tabs="timeline" data-height="2000" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Pi43r/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Pi43r/">Matthias Pitscher</a></blockquote></div>
+			<div class="fb-page" data-href="https://www.facebook.com/Pi43r/" data-tabs="timeline" data-height="2000" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Pi43r/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Pi43r/">Matthias Pitscher</a></blockquote></div>
 		</div>
 	</div>
 </body>
