--- a/glitchfont.html
+++ b/glitchfont.html
@@ -32,10 +32,12 @@ textarea {
     line-height: 0.7;
 }
 </style>
-I created Glitchfont in the course <a href="https://www.uni-weimar.de/kunst-und-gestaltung/wiki/GMU:Wild_Type">Wild Type</a>. It is inspired by the infamous Pokemon <a href ="http://pre12.deviantart.net/4310/th/pre/f/2011/364/0/3/missingno_drawing_by_aerostat-d4krmly.jpg">MissingNo</a>.<br> 
+I created Glitchfont in the course <a href="https://www.uni-weimar.de/kunst-und-gestaltung/wiki/GMU:Wild_Type">Wild Type</a>. It is inspired by the infamous Pokemon <a href ="http://pre12.deviantart.net/4310/th/pre/f/2011/364/0/3/missingno_drawing_by_aerostat-d4krmly.jpg">MissingNo</a>.<br>
 Try out Glitchfont in the text box: </br>
 
 <textarea col="40"></textarea>
+
+<a href ="/fonts/Glitch0002.ttf" >Download ttf</a>
 
 <p class="testfont">
 
@@ -131,7 +133,7 @@ The Kartrashians are everywhere on Facebook. I seriously cannot comprehend the A
 I tweaked my Facebook page to keep it light hearted and blocked inhumanely cruel individuals - even that didn't help. I noticed that there's vindictive Facebook folks who constantly play on others compassion and gullibility:
 
 (I) by exploiting pics of sick children with "thumbs up to save this dying child's life"
-(II)"100 likes and God will save her/him" 
+(II)"100 likes and God will save her/him"
 (III)"how many amens for Jesus"
 (IV)"like/comment if you want this by tomorrow" - pictures of expensive cars, large houses and photos of numerous stacks of hundred dollar bills that was confiscated by the Feds during massive drug raids.
 
