--- a/plinth.html
+++ b/plinth.html
@@ -149,7 +149,7 @@ function handleOrientation(event) {
   degX = mapNum(x, -90, 90, 25, -25);
   degY = mapNum(y, -90, 90, 0, -15);
 
-  cube.style.transform = "rotateY("+degX+"deg)" + "rotateX("+degY+"deg)";
+  cube.style.transform = "rotateY("+degY+"deg)" + "rotateX("+degX+"deg)";
 
 }
 
