--- a/plinth.html
+++ b/plinth.html
@@ -31,6 +31,8 @@
     .wrap {
       perspective: 800px;
       perspective-origin: 50% 100px;
+      margin-left:auto;
+      margin-right:auto;
       margin-top: 50vh;
       display: flex;
       justify-content: center;
@@ -146,7 +148,7 @@ function handleOrientation(event) {
   if (x >  90) { x =  90};
   if (x < -90) { x = -90};
 
-  degX = mapNum(x, -90, 90, 25, -25);
+  degX = mapNum(x, -90, 90, 45, -45);
   degY = mapNum(y, -90, 90, 0, -15);
 
   cube.style.transform = "rotateY("+degY+"deg)" + "rotateX("+degX+"deg)";
