--- a/plinth.html
+++ b/plinth.html
@@ -30,8 +30,8 @@
     }
 
     .wrap {
-      perspective: 800px;
-      perspective-origin: 50% 100px;
+      perspective: 1000px;
+      perspective-origin: bottom center 100px;
       margin-left:auto;
       margin-right:auto;
       margin-top: 50vh;
@@ -54,7 +54,7 @@
     }
 
     .right {
-      transform: rotateY(270deg) translateX(100px);
+      transform: translateZ(-300px) rotateY(270deg) translateX(100px) ;
       transform-origin: bottom right;
       background-color: #eee;
       width: 200px;
@@ -62,7 +62,7 @@
     }
 
     .left {
-      transform: rotateY(-270deg) translateX(-100px);
+      transform: translateZ(-300px) rotateY(-270deg) translateX(-100px);
       transform-origin: bottom left;
       background-color: #eee;
       width: 200px;
@@ -70,7 +70,7 @@
     }
 
     .top {
-      transform: rotateX(-90deg) translateY(-100px);
+      transform: translateZ(-300px) rotateX(-90deg) translateY(-100px);
       transform-origin: center top;
       background-color: #eee;
       height: 200px;
@@ -78,7 +78,7 @@
     }
 
     .front {
-      transform: translateZ(100px);
+      transform: translateZ(-200px);
       background-color: white;
       width: 200px;
       height: 65vh;
