add new portfolio design

--- a/plinth.html
+++ b/plinth.html
@@ -11,15 +11,16 @@
       width: 100%;
       height: 100%;
       margin: 0;
-      overflow:hidden;
+      overflow: hidden;
     }
 
-    .wall{
-      width:100%;
-      height:100%;
+    .wall {
+      width: 100%;
+      height: 100%;
       z-index: -2;
       position: fixed;
     }
+
     .floor {
       background-color: #ccc;
       height: 25vh;
@@ -32,8 +33,8 @@
     .wrap {
       perspective: 1000px;
       perspective-origin: bottom center 100px;
-      margin-left:auto;
-      margin-right:auto;
+      margin-left: auto;
+      margin-right: auto;
       margin-top: 50vh;
       display: flex;
       justify-content: center;
@@ -50,11 +51,10 @@
 
     .cube div {
       position: absolute;
-
     }
 
     .right {
-      transform: translateZ(-200px) rotateY(270deg) translateX(100px) ;
+      transform: translateZ(-200px) rotateY(270deg) translateX(100px);
       transform-origin: bottom right;
       background-color: #eee;
       width: 150px;
@@ -79,7 +79,7 @@
 
     .front {
       transform: translateZ(-100px);
-      background-color: white;
+      background-color: #fff;
       width: 150px;
       height: 65vh;
     }
@@ -89,9 +89,7 @@
       background-color: #ccc;
       width: 4000px;
       height: 2000px;
-
     }
-
   </style>
 </head>
 
@@ -100,7 +98,7 @@
   <!-- <div class="floor"></div> -->
   <div class="wrap">
     <div class="cube">
-       <div class="front"> </div>
+      <div class="front"> </div>
       <div class="top"></div>
       <div class="left"></div>
       <div class="right"></div>
@@ -113,54 +111,59 @@
 </html>
 
 <script>
-//Global variables
-var w = window.innerWidth;
-var h = window.innerHeight;
-cube = document.getElementsByClassName("cube")[0];
+  //Global variables
+  var w = window.innerWidth;
+  var h = window.innerHeight;
+  cube = document.getElementsByClassName("cube")[0];
 
-window.onresize = function (event){
-  w = window.innerWidth;
-  h = window.innerHeight;
-};
+  window.onresize = function(event) {
+    w = window.innerWidth;
+    h = window.innerHeight;
+  };
 
+  if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+    window.addEventListener('deviceorientation', handleOrientation);
+  } else {
+    (function() {
+      document.onmousemove = handleMouseMove;
 
-(function() {
-    document.onmousemove = handleMouseMove;
-    function handleMouseMove(e) {
+      function handleMouseMove(e) {
         var mouseX = e.pageX;
         var mouseY = e.pageY;
-        var CoorX  = mouseX - w/2;
-        var CoorY  = mouseY - h/2;
+        var CoorX = mouseX - w / 2;
+        var CoorY = mouseY - h / 2;
 
-        var degX = mapNum(CoorX, -w/2, w/2, 25, -25);
-        var degY = mapNum(CoorY, -h/2, h/2, 0, -15);
+        var degX = mapNum(CoorX, -w / 2, w / 2, 25, -25);
+        var degY = mapNum(CoorY, -h / 2, h / 2, 0, -15);
 
-        cube.style.transform = "rotateY("+degX+"deg)" + "rotateX("+degY+"deg)";
+        cube.style.transform = "rotateY(" + degX + "deg)" + "rotateX(" + degY + "deg)";
 
-    }
-})();
+      }
+    })();
+  }
 
-function handleOrientation(event) {
-  var x = event.beta;  // In degree in the range [-180,180]
-  var y = event.gamma; // In degree in the range [-90,90]
+  function handleOrientation(event) {
+    var x = event.beta; // In degree in the range [-180,180]
+    var y = event.gamma; // In degree in the range [-90,90]
 
-  // Because we don't want to have the device upside down
-  // We constrain the x value to the range [-90,90]
-  if (x >  90) { x =  90};
-  if (x < -90) { x = -90};
+    // Because we don't want to have the device upside down
+    // We constrain the x value to the range [-90,90]
+    if (x > 90) {
+      x = 90
+    };
+    if (x < -90) {
+      x = -90
+    };
 
-  degX = mapNum(x, -90, 90, 45, -45);
-  degY = mapNum(y, -90, 90, -45, 45);
+    degX = mapNum(x, -90, 90, 45, -45);
+    degY = mapNum(y, -90, 90, -45, 45);
 
-  cube.style.transform = "rotateY("+degY+"deg)" + "rotateX("+degX+"deg)";
+    cube.style.transform = "rotateY(" + degY + "deg)" + "rotateX(" + degX + "deg)";
 
-}
+  }
 
-if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-    window.addEventListener('deviceorientation', handleOrientation);
-}
 
-function mapNum(n, start1, stop1, start2, stop2) {
-  return ((n-start1)/(stop1-start1))*(stop2-start2)+start2;
-};
+  function mapNum(n, start1, stop1, start2, stop2) {
+    return ((n - start1) / (stop1 - start1)) * (stop2 - start2) + start2;
+  };
 </script>
