--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<script type="text/javascript">
-  if (screen.width <= 699) {
-  document.location = "mobile.txt";
-  }
-</script>
-	<meta http-equiv="refresh" content="0; url=/index.txt" />
+	  if (screen.width <= 699) {
+	  	document.location = "mobile.html";
+	  }
+	</script>
+	<meta http-equiv="refresh" content="0; url=/index_v1.1.txt" />
 	<meta name="description" content="THIS SITE IS NOT FOR ENTERTAINMENT">
 </head>
 <body>
