--- a/clock/index.html
+++ b/clock/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="contemporary, clock, javascript, black and white, nice">
     <meta name="author" content="Matthias Pitscher">
     <!-- facbeook stuff-->
-    <meta property="og:url" content="fb.png">
+    <meta property="og:image" content="fb.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Stretch o'Clock">
     <meta property="og:description" content="A contemporary stretching clock. Please enjoy the time.">
