--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<script type="text/javascript">
 	  if (screen.width <= 699) {
-	  	document.location = "mobile.html";
+	  	document.location = "mobile.txt";
 	  }
 	</script>
 	<meta http-equiv="refresh" content="0; url=/index_v1.1.txt" />
