--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!doctype html>
 <html>
+
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113340964-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-113340964-1');
+	</script>
+
 	<script type="text/javascript">
-	  if (screen.width <= 699) {
-	  	document.location = "mobile.txt";
-	  }
+		if (screen.width <= 699) {
+			document.location = "mobile.txt";
+		}
 	</script>
 	<meta http-equiv="refresh" content="0; url=/index_v1.1.txt" />
 	<meta name="description" content="THIS SITE IS NOT FOR ENTERTAINMENT">
 </head>
+
 <body>
 
 
 
 </body>
+
 </html>
