--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	<script type="text/javascript">
 		if (screen.width <= 699) {
 			document.location = "mobile.txt";
+		}else{
+			document.location = "index_v1.1.txt";
 		}
 	</script>
-	<meta http-equiv="refresh" content="0; url=/index_v1.1.txt" />
 	<meta name="description" content="THIS SITE IS NOT FOR ENTERTAINMENT">
 </head>
 
