--- a/checkpattern/index.html
+++ b/checkpattern/index.html
@@ -9,9 +9,8 @@
       margin: 0;
     }
   </style>
-  <script src="../p5.min.js"></script>
-  <script src="../addons/p5.dom.min.js"></script>
-  <script src="../addons/p5.sound.min.js"></script>
+  <script src="../libraries/p5.min.js"></script>
+  <script src="../libraries/p5.dom.min.js"></script>
   <script src="sketch.js"></script>
 
   <style>
@@ -41,7 +40,7 @@
   <br>
   <p style="margin-bottom: 0;">Inspired by </p>
   <blockquote style="margin-top: 0;" class="twitter-tweet" data-cards="hidden" data-lang="de"><p lang="en" dir="ltr">One of my portraits <a href="https://t.co/URmDspcwnH">pic.twitter.com/URmDspcwnH</a></p>&mdash; Akiyoshi Kitaoka (@AkiyoshiKitaoka) <a href="https://twitter.com/AkiyoshiKitaoka/status/844356094369513473?ref_src=twsrc%5Etfw">22. März 2017</a></blockquote>
-  
+
 
 <body>
 </body>
