--- a/checkpattern/index.html
+++ b/checkpattern/index.html
@@ -9,8 +9,8 @@
       margin: 0;
     }
   </style>
-  <script src="../libraries/p5.min.js"></script>
-  <script src="../libraries/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
   <script src="sketch.js"></script>
 
   <style>
