--- a/404.html
+++ b/404.html
@@ -6,22 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>404</title>
     <style>
-        body{
-            margin: 0 auto;
-        }
+    .container{
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 30vh;
+    }
 
     </style>
 </head>
 <body>
-    <h1>404</h1>
-    <br>
-    <p>
-        Try one of these:
-        <br>
-        <a href="https://www.pitscher.net">pitscher.net</a>
-        <a href="https://www.pitscher.net/HfG">pitscher.net/HfG/</a>
+    <div class="container">
 
-    </p>
+        <h1>404</h1>
+        <br>
+        <p>
+            Try one of these:
+            <br>
+            <a href="https://www.pitscher.net">pitscher.net</a>
+            <br>
+            <a href="https://www.pitscher.net/HfG">pitscher.net/HfG/</a>
+            
+        </p>
+    </div>
     
 </body>
 </html>
