--- a/whosafraidofredyellowandblue/index.html
+++ b/whosafraidofredyellowandblue/index.html
@@ -16,25 +16,45 @@ Please break and redistribute. I promise restauration will not cost anything ;)
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8">
+    <title>Who's Afraid of Red, Yellow and Blue</title>
+    <!-- Search Engine -->
+    <meta name="image" content="preview.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Who's Afraid of Red, Yellow and Blue">
+    <meta itemprop="image" content="preview.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Who's Afraid of Red, Yellow and Blue">
+    <meta name="twitter:creator" content="@pitscher">
+    <meta name="twitter:image:src" content="preview-twitter.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Who's Afraid of Red, Yellow and Blue">
+    <meta name="og:image" content="preview-fb.png">
+    <meta name="og:type" content="website">
 
     <style>
-        body{
+        body {
             margin: 0;
             width: 100vw;
             height: 100vh;
             display: flex;
         }
-        .blue{
+
+        .blue {
             background: blue;
             height: 100%;
             width: 2%;
         }
-        .red{
+
+        .red {
             background: red;
             height: 100%;
             width: 97%;
         }
-        .yellow{
+
+        .yellow {
             background: yellow;
             height: 100%;
             width: 1%;
@@ -47,4 +67,5 @@ Please break and redistribute. I promise restauration will not cost anything ;)
     <div class="red"></div>
     <div class="yellow"></div>
 </body>
+
 </html>
