--- a/whosafraidofredyellowandblue/index.html
+++ b/whosafraidofredyellowandblue/index.html
@@ -20,18 +20,18 @@ Please break and redistribute. I promise restauration will not cost anything ;)
     <meta charset="utf-8">
     <title>Who's Afraid of Red, Yellow and Blue</title>
     <!-- Search Engine -->
-    <meta name="image" content="preview.png">
+    <meta name="image" content="preview.jpg">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Who's Afraid of Red, Yellow and Blue">
-    <meta itemprop="image" content="preview.png">
+    <meta itemprop="image" content="preview.jpg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Who's Afraid of Red, Yellow and Blue">
     <meta name="twitter:creator" content="@pitscher">
-    <meta name="twitter:image:src" content="preview-twitter.png">
+    <meta name="twitter:image:src" content="preview-twitter.jpg">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Who's Afraid of Red, Yellow and Blue">
-    <meta name="og:image" content="preview-fb.png">
+    <meta name="og:image" content="preview-fb.jpg">
     <meta name="og:type" content="website">
 
     <style>
