--- a/emptyphotos/index.html
+++ b/emptyphotos/index.html
@@ -14,7 +14,7 @@
 
 <head>
   <link rel="icon" type="image/png" href="favicon.png" />
-  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       padding: 0;
