--- a/404.html
+++ b/404.html
@@ -19,13 +19,11 @@
 
         <h1>404</h1>
         <br>
+        <h2>Sorryyyyy</h2>
         <p>
-            Try one of these:
+            Try this:
             <br>
             <a href="https://www.pitscher.net">pitscher.net</a>
-            <br>
-            <a href="https://www.pitscher.net/HfG">pitscher.net/HfG/</a>
-            
         </p>
     </div>
     
