--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</script>
 
 	<script type="text/javascript">
-		if (screen.width <= 699) {
-			document.location = "mobile.txt";
-		}else{
-			document.location = "index_v1.4.txt";
-		}
+		//if (screen.width <= 699) {
+		//	document.location = "mobile.txt";
+		//}else{ 
+			document.location = "index_v1.5.txt";
+		//}
 	</script>
 	<meta name="description" content="THIS SITE IS NOT FOR ENTERTAINMENT">
 </head>
