--- a/clicker/index.html
+++ b/clicker/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!---
+A little game for the annual Student exhibition
+Sankt Interface at the University of Arts Linz
+by pitscher.net
+
+In loving memory of Douglas Engelbart
+-->
 
 <head>
   <meta charset="utf-8">
@@ -24,9 +31,10 @@
     HIGHSCORES <br>
     <ol id="highscore"></ol>
   </div>
-  
+
 </body>
 
 
 <script src="sketch.js"></script>
+
 </html>
