--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 
 <head>
-	<script type="text/javascript">
-		//if (screen.width <= 699) {
-		//	document.location = "mobile.txt";
-		//}else{ 
-			document.location = "index_v1.5.txt";
-		//}
-	</script>
-	<meta name="description" content="THIS SITE IS NOT FOR ENTERTAINMENT">
+    <script type="text/javascript">
+        //if (screen.width <= 699) {
+        //  document.location = "mobile.txt";
+        //}else{ 
+            document.location = "index_v1.6.txt";
+        //}
+    </script>
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="THIS SITE IS NOT AN ARTIST"/>
+    <meta property="og:image" content="https://pitscher.net/img/Pitscher_Phone_Portrait_tiny.jpg"/>
+    <meta property="og:url" content="https://pitscher.net"/>
 </head>
 
 <body>
